Add Open Graph specific avatar.

--- a/config.toml
+++ b/config.toml
@@ -27,6 +27,7 @@ author = "Jorn Vanloofsvelt"
 location = "Belgium"
 
 avatar = "images/avatar.jpg"
+avatarOg = "images/avatar-og.jpg"
 
 description = "Hero for fun"
 
