--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ copyright = "© 2021 Jorn Vanloofsvelt"
 
 
 [params]
-favicon = "favicon.svg"
+favicon = "/favicon.svg"
 
 # HTML meta description for home page. What makes a good description?
 tagline = "Jorn Vanloofsvelt - S-Class Hero" 
@@ -26,15 +26,15 @@ author = "Jorn Vanloofsvelt"
 
 location = "Belgium"
 
-avatar = "images/avatar.jpg"
-avatarOg = "images/avatar-og.jpg"
+avatar = "/images/avatar.jpg"
+
+avatarOg = "/images/avatar-og.jpg"
 
 description = "Hero for fun"
 
 github = "JVanloofsvelt"
 
 linkedin = "jorn-vanloofsvelt"
-
 
 # An array of links to other sites can also be added:
 #[[params.links]]
