--- a/config.toml
+++ b/config.toml
@@ -38,6 +38,8 @@ github = "JVanloofsvelt"
 
 linkedin = "jorn-vanloofsvelt"
 
+facebookAppId = "196088782584132"
+
 # An array of links to other sites can also be added:
 #[[params.links]]
 #title = "Link title"
