Add 'Buy me a coffee'.

--- a/config.toml
+++ b/config.toml
@@ -40,6 +40,8 @@ linkedin = "jorn-vanloofsvelt"
 
 facebookAppId = "196088782584132"
 
+buyMeACoffeeId = "jvanloofsvelt"
+
 # An array of links to other sites can also be added:
 #[[params.links]]
 #title = "Link title"
